--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -191,7 +191,7 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.6.1</version>
 		</dependency>
-		<dependency>
+	 	<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>4.0.2.RELEASE</version>
@@ -201,7 +201,28 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>4.0.2.RELEASE</version>
 		</dependency>
-
+<!--
+ 			<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.2.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.2.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.2.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>3.2.0.RELEASE</version>
+		</dependency>
+		-->
 	</dependencies>
 	<build>
 		<finalName>springmvc</finalName>
